# forward-forward

./: .gitignore  README.md  main.py  new.ipynb  pyproject.toml  requirements.txt
run/: test.py  vanilla.py  vanillagelu.py  vanillarelu.py
src/forwardforward/: __init__.py  config.py  data.py  experimental.py  network.py  run.py  train.py  viz.py
tests/: _fixtures.py  test_data.py  test_experimental.py  test_network.py  test_train.py
