[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "forwardforward"
version = "0.0.1"
description = "JAX implementation of the forwardforward algorithm (Hinton, 2022)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  'matplotlib==3.6.2',
  'jax==0.4.1',
  'jaxlib==0.4.1',
  'flax==0.5.3',
  'chex==0.1.5',
  'optax==0.1.4',
  'keras==2.11.0',
  'tensorflow-macos==2.11.0'
]